make navbar fixed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,8 @@
     </div>
   </body>
 
+  <!-- technical debt warning: idealy all of this should just be in the bundle file -->
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="./semantic/dist/semantic.min.js"></script>
   <script src="./javascripts/bundle.js"></script>
 </html>
