navbar shows logged in user

--- a/views/secure.ejs
+++ b/views/secure.ejs
@@ -7,12 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id='root'>
+    <div id='root' test='hit' user=<%= user.local.username %>>
     </div>
   </body>
+
+  <!-- there has to be a less hacky way to do this -->
+  <script>
+    console.log(window.user);
+  </script>
 
   <!-- technical debt warning: idealy all of this should just be in the bundle file -->
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="./semantic/dist/semantic.min.js"></script>
-  <script src="./javascripts/bundle.js"></script>
+  <script src="./javascripts/secure-bundle.js"></script>
 </html>
