--- a/views/main.ejs
+++ b/views/main.ejs
@@ -14,5 +14,5 @@
   <!-- technical debt warning: idealy all of this should just be in the bundle file -->
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="./semantic/dist/semantic.min.js"></script>
-  <script src="./javascripts/main-bundle.js"></script>
+  <script src="./javascripts/bundle.js"></script>
 </html>
