--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><%= Exzume %></title>
     <link rel="stylesheet" type="text/css" href="./semantic/dist/semantic.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -10,7 +10,7 @@
     </div>
   </body>
 
-  <!-- technical debt warning: idealy all of this should just be in the bundle file -->
+  <!-- technical debt warning: ideally all of this should just be in the bundle file -->
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="./semantic/dist/semantic.min.js"></script>
   <script src="./javascripts/bundle.js"></script>
