--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= Exzume %></title>
+    <title><%= title %></title>
     <link rel="stylesheet" type="text/css" href="./semantic/dist/semantic.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
