working on how to add bg image to splash page ONLY with semantic

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,6 @@
 body {
+  background-image: url('./exzume-splash.jpg') !important;
+  background-size: cover !important;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
