--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,7 +3,7 @@
   <head>
     <title><%= title %></title>
     <link rel="stylesheet" type="text/css" href="./semantic/dist/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./stylesheets/style.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
