change white to light blue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,3 @@
 body {
-  background-image: url('../images/sand-splash.jpg');
-  background-size: 100% 100%;
-  padding: 50px;
-}
-
-a {
-  color: #00B7FF;
+  background-color: #F6FBFC;
 }
