add back end feature resource route

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,6 +9,7 @@
   <body>
     <div id='root'>
     </div>
+    <div class='hack'></div>
     <!-- technical debt warning: ideally all of this should just be in the bundle file -->
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="./semantic/dist/semantic.min.js"></script>
